# helios

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/skills/commit-push/: SKILL.md
docs/: alpine-migration.md
helios-bar/: Cargo.toml
helios-bar/src/: main.rs
helios-dock/: Cargo.toml
helios-dock/src/: app_item.rs  config.rs  dock.rs  main.rs
hpkg/: Cargo.toml
hpkg/src/: main.rs
