[package]
name = "helios-bar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "helios-bar"
path = "src/main.rs"

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
